--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -5,8 +5,8 @@
 
 
    {% block body %}
-
-     <h2>Cost Estimate Calculator</h2>
+    <title> Estimate </title>
+     <h1>Cost Estimate Calculator</h1>
      <p>Enter your measurments in inches!</p>
         <form action="/add" method="POST">
             <label for="radius">
