--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
 
 
    {% block body %}
-		<h2 style="text-align: center;padding: 10px; font-size: 50px ;"> Welcome to Tanks </h2>
+		<title>Index</title>
+		<h1 style="text-align: center;padding: 10px; font-size: 50px ;"> Welcome to Tanks </h1>
 		<br>
 		<p style="font-size: large; padding:10px; margin: 10px;">
 			Welcome to Tanks Inc. we provide the highest quality vertical tanks here in the midwest area (Iowa, Illinois, Indiana, Nebraska, Wisconsin). We have the most competitive prices in the midwest.
