--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,8 @@
 
 
    {% block body %}
-		<h2 style="text-align: center;padding: 10px; font-size: 50px ;">About our Vertical Tanks</h2>
+		<title>About</title>
+		<h1 style="text-align: center;padding: 10px; font-size: 50px ;">About our Vertical Tanks</h1>
 		<br>
 		<p style="font-size:large; padding:10px; margin: 10px;">
 			Here at vertical tanks we provided high quality tanks for a very reasonable price. We are currently the industy leader in tanks in the midwest. A picture of one of our tanks is on the home page. If you want to buy a tank and our worried that it might cost to much, go to our estimate page. On our estimate page we estimate the cost. It is super simple all you have to do is enter the height and radius of the tank size you want. Then it will compute the cost and display it back to you in no time at all!
