--- a/templates/estimate.html
+++ b/templates/estimate.html
@@ -5,7 +5,9 @@
 
 
    {% block body %}
-    <title> Estimate </title>
+   <head>
+    <title>Estimate</title>
+</head>
      <h1>Cost Estimate Calculator</h1>
      <p>Enter your measurments in inches!</p>
         <form action="/add" method="POST">
