--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,10 @@
 
 
    {% block body %}
-		<title>About</title>
+   <head>
+	   <title>About</title>
+   </head>
+		
 		<h1 style="text-align: center;padding: 10px; font-size: 50px ;">About our Vertical Tanks</h1>
 		<br>
 		<p style="font-size:large; padding:10px; margin: 10px;">
