--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href=http://127.0.0.1:5000>Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="http://127.0.0.1:5000/">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about">About</a>
