--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
 
 
    {% block body %}
-		<title>Index</title>
+   <head>
+	<title>Index</title>
+   </head>
 		<h1 style="text-align: center;padding: 10px; font-size: 50px ;"> Welcome to Tanks </h1>
 		<br>
 		<p style="font-size: large; padding:10px; margin: 10px;">
